--- a/app-TFG/src/app/image-loader/image-loader.component.html
+++ b/app-TFG/src/app/image-loader/image-loader.component.html
@@ -1,10 +1,10 @@
   
 <label> Introdueix la teva imatge </label> <br>
-<input type="file" name='image' (change)="sendImage($event)"/> <br>
+<input type="file" name='image' (change)="selectImage($event)"/> <br>
 <button type="submit" [disabled]="!isUploaded || selectedFormat === undefined" (click)="sendToBack()" > Enviar al back </button>
 <span> Pots introduir imatges PNG, JPG, WebP, BMP, TIFF, SVG AND GIF</span> <br>
 <h4> Escull el format en el que ho vols descarregar</h4>
-<select id="formatChoise" name="formatChoise" [(ngModel)]="selectedFormat">
+<select id="formatChoise" name="formatChoise" [(ngModel)]="selectedFormat" (change)="isFormatChange = false">
     <option value="jpg"> JPG </option>
     <option value="png"> PNG </option>
     <option value="webp"> WebP </option>
@@ -13,10 +13,13 @@
     <option value="svg"> SVG </option>
     <option value="gif"> GIF </option>
 </select> <br>
-<button (click)="imprimir()"> Veure elecció </button>
-<br><br><br>
-<img [src]="imageSrc" alt="Image"> 
+<!-- <button (click)="imprimir()"> Veure elecció </button> -->
 <br>
-<button [disabled]="!isUploaded || !isSent" (click)="downloadImage()" > Download your image</button>
+<span> Introdueix, si vols, el nom que tindrà la imatge a descarregar </span>
+<input type="text" name="nameImage" [(ngModel)]="nameSettedImage" />
+<br><br>
+<img [src]="imageSrc" alt="I haven't received any picture"> 
+<br>
+<button [disabled]="!isUploaded || !isSent || !isFormatChange" (click)="downloadImage()" > Download your image</button>
 
 
