--- a/app-TFG/src/app/lets-create/lets-create.component.html
+++ b/app-TFG/src/app/lets-create/lets-create.component.html
@@ -1,3 +1,5 @@
+<input type="file" name="image" (change)="selectImage($event)" /> <br />
+
 <button class="newOperator" (click)="executeSelectedOption()">
   New Operator
 </button>
@@ -6,3 +8,8 @@
   <option value="arithmeticOperation">Operación Aritmética</option>
   <option value="quantizer">Quantizador</option>
 </select>
+
+<button class="sendImage" (click)="seePhoto()"> VEURE </button>
+<div class="image-container">
+  <img [src]="selectedImage" alt="descripción-de-la-imagen">
+</div>
