button borrar tot working

--- a/app-TFG/src/app/lets-create/lets-create.component.html
+++ b/app-TFG/src/app/lets-create/lets-create.component.html
@@ -10,6 +10,7 @@
 </select>
 
 <button class="sendImage" (click)="seePhoto()"> VEURE </button>
+<button class="deleteAll" (click)="deleteAll()"> BORRAR TOT </button>
 <div class="image-container">
   <img [src]="selectedImage" alt="descripción-de-la-imagen">
 </div>
