button disabled if not foto

--- a/app-TFG/src/app/lets-create/lets-create.component.html
+++ b/app-TFG/src/app/lets-create/lets-create.component.html
@@ -9,7 +9,7 @@
   <option value="quantizer">Quantizador</option>
 </select>
 
-<button class="sendImage" (click)="seePhoto()"> VEURE </button>
+<button class="sendImage" [disabled]="!isUploaded" (click)="seePhoto()"> VEURE </button>
 <button class="deleteAll" (click)="deleteAll()"> BORRAR TOT </button>
 <div class="image-container">
   <img [src]="selectedImage" alt="descripción-de-la-imagen">
