seeing image lets create

--- a/app-TFG/src/app/lets-create/lets-create.component.html
+++ b/app-TFG/src/app/lets-create/lets-create.component.html
@@ -7,5 +7,5 @@
 <button class="sendImage" [disabled]="!isUploaded" (click)="seePhoto()"> VEURE </button> 
 <button class="deleteAll" (click)="deleteAll()"> BORRAR TOT </button>
 <div class="image-container">
-  <img [src]="selectedImage" alt="descripció-de-la-imatge">
+  <img [src]="imageSrc" alt="descripció-de-la-imatge">
 </div>
