seeing image or process

--- a/app-TFG/src/app/lets-create/lets-create.component.html
+++ b/app-TFG/src/app/lets-create/lets-create.component.html
@@ -6,6 +6,7 @@
 
 <button class="sendImage" [disabled]="!isUploaded" (click)="seePhoto()"> VEURE </button> 
 <button class="deleteAll" (click)="deleteAll()"> BORRAR TOT </button>
+<button class="proces" (click)="proces()"> proces </button>
 <div class="image-container">
   <img [src]="imageSrc" alt="descripció-de-la-imatge">
 </div>
