--- a/app-TFG/src/app/lets-create/lets-create.component.css
+++ b/app-TFG/src/app/lets-create/lets-create.component.css
@@ -17,3 +17,10 @@
   height: 50px;
 }
 
+.contrariBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+  height: 50px;
+}
