starting validation of boxes

--- a/app-TFG/src/app/lets-create/lets-create.component.html
+++ b/app-TFG/src/app/lets-create/lets-create.component.html
@@ -11,6 +11,7 @@
 <button class="deleteAll" (click)="deleteAll()"> BORRAR TOT </button>
 <!-- <button class="proces" (click)="proces()"> proces </button> -->
 <button class="imatge" (click)="showImageNewWindow()"> imatge </button>
+<button class="comprovacio" (click)="validate()"> SA POT? </button>
 <!-- <div class="image-container">
   <img [src]="imageSrc" alt="descripció-de-la-imatge">
 </div> -->
