--- a/app-TFG/src/app/reverse-box-type-dialog/reverse-box-type-dialog.component.html
+++ b/app-TFG/src/app/reverse-box-type-dialog/reverse-box-type-dialog.component.html
@@ -2,47 +2,96 @@
 <div mat-dialog-content>
   <form #form="ngForm">
     <mat-form-field>
-        <mat-label>Tipus de Box</mat-label>
-        <mat-select name="type" [(ngModel)]="selectedBoxType" required >
-            <mat-option value="Reverse_Wavelet">Reverse Wavelet</mat-option>
-            <mat-option value="ArithmeticOperation">Arithmetic Operation</mat-option>
-            <mat-option value="Dequantizer">Dequantizer</mat-option>
-        </mat-select>
+      <mat-label>Tipus de Box</mat-label>
+      <mat-select name="type" [(ngModel)]="selectedBoxType" required>
+        <mat-option value="Reverse_Wavelet">Reverse Wavelet</mat-option>
+        <mat-option value="ArithmeticOperation"
+          >Arithmetic Operation</mat-option
+        >
+        <mat-option value="Dequantizer">Dequantizer</mat-option>
+        <mat-option value="EntropyDecoder">EntropyDecoder</mat-option>
+        <mat-option value="Reverse_Prediction">Reverse_Prediction</mat-option>
+      </mat-select>
     </mat-form-field>
-    
 
-    <div *ngIf="(selectedBoxType == 'ArithmeticOperation')">
-        <label> Valor:  </label>
-        <input type="number" name="OperationNumber" [(ngModel)]="operationNumber" min="1" max="255" required> <br>
-        <label> Operació:  </label>
-        <select name="OperationType" [(ngModel)]="operationType" required>
-            <option value="Add">Add</option>
-            <option value="Sub">Substract</option>
-            <option value="Mult">Multiply</option>
-            <option value="Div">Divide</option>    
-        </select>   
+    <div *ngIf="selectedBoxType == 'ArithmeticOperation'">
+      <label> Valor: </label>
+      <input
+        type="number"
+        name="OperationNumber"
+        [(ngModel)]="operationNumber"
+        min="1"
+        max="255"
+        required
+      />
+      <br />
+      <label> Operació: </label>
+      <select name="OperationType" [(ngModel)]="operationType" required>
+        <option value="Add">Add</option>
+        <option value="Sub">Substract</option>
+        <option value="Mult">Multiply</option>
+        <option value="Div">Divide</option>
+      </select>
     </div>
 
-    <div *ngIf="(selectedBoxType == 'Reverse_Wavelet')">
-        <label> Nivells:  </label>
-        <input type="number" name="WaveletLevel" [(ngModel)]="waveletLevel" min="0" max="7" required> <br>
-        <label> Tipus de Wavelet:  </label>
-        <select name="WaveletType" [(ngModel)]="waveletType" required>
-            <option value="Haar">Haar</option>
-            <option value="5:3">5:3</option>
-            <option value="9:7">9:7</option>   
-        </select>  
+    <div *ngIf="selectedBoxType == 'Reverse_Wavelet'">
+      <label> Nivells: </label>
+      <input
+        type="number"
+        name="WaveletLevel"
+        [(ngModel)]="waveletLevel"
+        min="0"
+        max="7"
+        required
+      />
+      <br />
+      <label> Tipus de Wavelet: </label>
+      <select name="WaveletType" [(ngModel)]="waveletType" required>
+        <option value="Haar">Haar</option>
+        <option value="5:3">5:3</option>
+        <option value="9:7">9:7</option>
+      </select>
     </div>
 
-    <div *ngIf="(selectedBoxType == 'Dequantizer')">
-        <label> Pas de Quantització:  </label>
-        <input type="number" name="Q_step" [(ngModel)]="q_step" min="1" max="255" required>
+    <div *ngIf="selectedBoxType == 'Dequantizer'">
+      <label> Pas de Quantització: </label>
+      <input
+        type="number"
+        name="Q_step"
+        [(ngModel)]="q_step"
+        min="1"
+        max="255"
+        required
+      />
     </div>
 
+    <div *ngIf="selectedBoxType == 'EntropyDecoder'">
+      <label> Tipus de Descodificador: </label>
+      <select name="DecoderType" [(ngModel)]="decoderType" required>
+        <option value="Zip">Zip</option>
+        <option value="Lzma">Lzma</option>
+      </select>
+    </div>
+
+    <div *ngIf="selectedBoxType == 'Reverse_Prediction'">
+      <label> Tipus de Predictor: </label>
+      <select name="PredictorType" [(ngModel)]="predictorType" required>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+      </select>
+    </div>
   </form>
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Cancel</button>
-  <button mat-raised-button color="primary" [disabled]="!form.valid" (click)="onSaveClick()">Save</button>
+  <button
+    mat-raised-button
+    color="primary"
+    [disabled]="!form.valid"
+    (click)="onSaveClick()"
+  >
+    Save
+  </button>
 </div>
-
