disabled button execute

--- a/app-TFG/src/app/lets-create/lets-create.component.html
+++ b/app-TFG/src/app/lets-create/lets-create.component.html
@@ -17,7 +17,7 @@
 
 <button
   class="sendImage"
-  [disabled]="!isValid && !isUploaded"
+  [disabled]="!(isValid && isUploaded)"
   (click)="executeProcess()"
 >
   EXECUTAR
