button download data but not working with back

--- a/app-TFG/src/app/lets-create/lets-create.component.html
+++ b/app-TFG/src/app/lets-create/lets-create.component.html
@@ -14,6 +14,13 @@
 >
   New Reverse Box
 </button>
+<button
+  class="downloadJson"
+  (click)="openDownloadFromJsonFormatDialog()"
+  [matTooltip]="DownloadToolTip"
+>
+  Download Data
+</button>
 
 <button
   class="sendImage"
