--- a/app-TFG/src/app/lets-create/lets-create.component.css
+++ b/app-TFG/src/app/lets-create/lets-create.component.css
@@ -24,3 +24,11 @@
   width: 150px;
   height: 50px;
 }
+
+.downloadJson{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+  height: 50px;
+}
