--- a/app-TFG/src/app/download-from-json-format/download-from-json-format.component.html
+++ b/app-TFG/src/app/download-from-json-format/download-from-json-format.component.html
@@ -1,7 +1,7 @@
 <h2 mat-dialog-title>Choose your format to download</h2>
 <div mat-dialog-content>
     <label>
-        <input type="radio" name="format" [(ngModel)]="selectedFormat" value="excel">
+        <input type="radio" name="format" [(ngModel)]="selectedFormat" value="xlsx">
         Excel
       </label>
       <label>
