deleter and checker if its empty data.json

--- a/app-TFG/src/app/lets-create/lets-create.component.html
+++ b/app-TFG/src/app/lets-create/lets-create.component.html
@@ -18,6 +18,7 @@
   class="downloadJson"
   (click)="openDownloadFromJsonFormatDialog()"
   [matTooltip]="DownloadToolTip"
+  [disabled]="isEmptyJSON"
 >
   Download Data
 </button>
@@ -28,6 +29,12 @@
   (click)="executeProcess()"
 >
   EXECUTAR
+</button>
+<button
+  class="deleteJSON"
+  (click)="deleteJSON()"
+>
+  DELETE JSON
 </button>
 <button class="deleteAll" (click)="deleteAll()" [matTooltip]="deleteAllToolTip">
   BORRAR TOT
