--- a/app-TFG/src/app/lets-create/lets-create.component.css
+++ b/app-TFG/src/app/lets-create/lets-create.component.css
@@ -32,3 +32,12 @@
   width: 150px;
   height: 50px;
 }
+
+.table {
+  margin: auto;
+  position: relative;
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 50px;
+
+}
