--- a/app-TFG/src/app/lets-create/lets-create.component.html
+++ b/app-TFG/src/app/lets-create/lets-create.component.html
@@ -45,7 +45,7 @@
   <table *ngIf="isDataAvailable">
     <tbody>
       <tr>
-        <td>Name Image</td>
+        <td>Nom de la imatge</td>
         <td>{{ processLogger.nameImage }}</td>
       </tr>
       <tr>
@@ -53,40 +53,28 @@
         <td>{{ processLogger.timestamp }}</td>
       </tr>
       <tr>
-        <td>Compression Ratio</td>
-        <td>{{ processLogger.entropyStats.compressionRatio }}</td>
-      </tr>
-      <tr>
-        <td>Bits per Sample</td>
-        <td>{{ processLogger.entropyStats.bitsPerSample }}</td>
-      </tr>
-      <tr>
-        <td>Bits per Sample (Original)</td>
-        <td>{{ processLogger.entropyStats.bitsPerSampleOriginal }}</td>
-      </tr>
-      <tr>
-        <td>Final Bits per Sample</td>
-        <td>{{ processLogger.entropyStats.finalBitsPerSample }}</td>
-      </tr>
-      <tr>
-        <td>Max</td>
+        <td>Valor màxim</td>
         <td>{{ processLogger.initStats.max }}</td>
       </tr>
       <tr>
-        <td>Min</td>
+        <td>Valor mínim</td>
         <td>{{ processLogger.initStats.min }}</td>
       </tr>
       <tr>
-        <td>Entropy</td>
+        <td>Valor mitjà</td>
+        <td>{{ processLogger.initStats.mean }}</td>
+      </tr>
+      <tr>
+        <td>Entropia inicial</td>
         <td>{{ processLogger.initStats.entropy }}</td>
       </tr>
       <tr>
-        <td>Variance</td>
-        <td>{{ processLogger.initStats.varianze }}</td>
+        <td>Entropia final</td>
+        <td>{{ processLogger.entropyStats.finalEntropy }}</td>
       </tr>
       <tr>
-        <td>Mean</td>
-        <td>{{ processLogger.initStats.mean }}</td>
+        <td>Rati de compressió</td>
+        <td>{{ processLogger.entropyStats.compressionRatio }}</td>
       </tr>
       <tr>
         <td>PSNR</td>
