--- a/app-TFG/src/app/lets-create/lets-create.component.css
+++ b/app-TFG/src/app/lets-create/lets-create.component.css
@@ -10,30 +10,22 @@
 }
 
 .newBox {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 150px;
   height: 50px;
 }
 
 .reverseBox {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
   width: 150px;
   height: 50px;
 }
 
-.downloadJson{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 150px;
-  height: 50px;
+.margin-right{
+  margin-right: 10px;
 }
 
 .table {
+
   margin: auto;
   position: relative;
   display: flex;
